--- a/src/style/MarkDownPreview.css
+++ b/src/style/MarkDownPreview.css
@@ -8,6 +8,10 @@
   margin-bottom: 3px;
   border-bottom: 1px solid rgba(255, 147, 143, 0.2);
 }
+.markdown-h4 {
+  margin-top: 5px;
+  margin-bottom: 2px;
+}
 ul {
   margin-top: 3px;
   margin-bottom: 3px;
